tests/ui/attributes/malformed-must_use.rs
#[must_use()] //~ ERROR malformed
struct Test;

fn main() {}
